--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve  --env=prod",
     "start:es": "ng serve --aot --i18nFile=src/locale/messages.es.xlf --i18nFormat=xlf --locale es",
     "build": "ng build --prod --aot --i18nFile=src/locale/messages.es.xlf --i18nFormat=xlf --locale es",
     "test": "ng test",
@@ -29,6 +29,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "handlebars": "^4.0.11",
+    "jspdf": "^1.4.1",
     "ngx-facebook": "^2.4.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
