--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve  --env=prod",
+    "start": "ng serve --host 192.168.2.73",
     "start:es": "ng serve --aot --i18nFile=src/locale/messages.es.xlf --i18nFormat=xlf --locale es",
     "build": "ng build --prod --aot --i18nFile=src/locale/messages.es.xlf --i18nFormat=xlf --locale es",
     "test": "ng test",
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "angular2-cookie": "^1.2.6",
+    "angular2-cookies": "^0.1.0",
     "angular4-social-login": "^1.0.13",
     "boostrap": "^2.0.0",
     "bootstrap": "^3.3.7",
